--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -7,14 +7,14 @@
 
 // The font size set on the root html element.
 // Specify unitless, it will be recalculated as %.
-$base-font-size:      18;
+$base-font-size:      17.5;
 
 // Base and heading line height, unitless.
 $base-line-height:    1.5;
 $heading-line-height: 1.3;
 
 // The pt font-size to be used for printing.
-$print-font-size:     12pt;
+$print-font-size:     11pt;
 
 // The font sizes in our type hierarchy as tee shirt sizes.
 // Size m is base.
@@ -51,7 +51,7 @@ $font-size: $font-size-fixed;
 // Font weights.
 // Use like this: var(--fw-normal)
 $font-weight: (
-  headings:   700,
+  headings:   600,
   bolder:     900,
   bold:       700,
   medium:     500,
@@ -102,7 +102,7 @@ $ui-monospace:    ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Conso
 // Use like this: var(--ff-body)
 $font-family: (
   body:       $ui-serif,
-  headings:   $ui-sans-serif,
+  headings:   "Work Sans",
   alt:        $system-ui,
   monospace:  $ui-monospace,
 );
